--- a/views/index1.ejs
+++ b/views/index1.ejs
@@ -1,82 +1,128 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
+
 <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
-    <!-- Scrollbar Custom CSS -->
-    <link rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css">
-
-    <link rel="stylesheet" href="index.css">
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <title>SNAP Student</title>
+
+    <!-- Bootstrap CSS CDN -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+    <!-- Our Custom CSS -->
+    <link rel="stylesheet" href="index1.css">
+
+    <!-- Font Awesome JS -->
+    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
 </head>
+
 <body>
-
 <div class="wrapper">
-    <!-- Sidebar Partial -->
-    <%include ../views/partials/sidebar.ejs%>
-</div>
-<!-- Navigation Bar -->
-<div class="navLeft">
-    <ul class="navbar-nav">
-        <li>
+
+    <!-- Sidebar -->
+    <nav id="sidebar">
+        <div class="sidebar-header">
             <h3>SNAP</h3>
-        </li>
-    </ul>
+        </div>
+
+        <ul class="list-unstyled components">
+            <li class="active">
+                <a href="/index1">Home</a>
+            </li>
+            <li>
+                <a href="#">Shuttles</a>
+            </li>
+            <li>
+                <a href="#">Policy</a>
+            </li>
+            <li>
+                <a href="#">Contact SNAP</a>
+            </li>
+        </ul>
+
+        <div>
+            <p id="bottom">SNAP: 508-831-6111</p>
+        </div>
+    </nav>
+
+    <!-- Page Content -->
+    <div id="content">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+
+                <button type="button" id="sidebarCollapse" class="btn btn-info">
+                    <i class="fas fa-align-left"></i>
+                    <span>Menu</span>
+                </button>
+
+            </div>
+        </nav>
+
+        <!-- Request Ride Form -->
+        <div class="container" style="align-content: center">
+            <h4 style="text-align: center">Request Form</h4>
+            <form action="/submitRequest" method="post">
+
+                <div class="form-group form-inline">
+                    <label style="float: left">To:</label>
+                    <input type="text" class="form-control" name="goingTo">
+                </div>
+
+                <div class="form-group  form-inline">
+                    <label>From:</label>
+                    <input type="text" class="form-control" name="comingFrom">
+                </div>
+
+                <div class="form-group  form-inline">
+                    <label>No. Passengers:</label>
+                    <input type="number" class="form-control" min="0" max="5" name="numPassengers">
+                </div>
+
+                <label>Are Accommodations Needed?</label>
+                <div class="form-group form-check-inline">
+                    <label class="radio-inline" for="yesCheck">
+                        <input type="radio" class="btn-space form-check-input" onclick="javascript:yesnoCheck();" name="yesno"
+                               id="yesCheck">Yes
+                    </label>
+                    <label class="radio-inline" for="noCheck">
+                        <input type="radio" class="btn-space form-check-input" onclick="javascript:yesnoCheck();" name="yesno"
+                               id="noCheck" checked>No
+                    </label>
+                </div>
+                <div class="form-group" id="ifYes" style="visibility:hidden">
+
+                    <input type="text" class="form-control" name="accommodations" value="Insert Accommodations...">
+                </div>
+
+                <div class="form-group text-center">
+                    <input type="submit" id="submit" class="btn btn-secondary btn-lg" value="Submit">
+                </div>
+            </form>
+
+        </div>
+
+    </div>
+
 </div>
 
-    <div class="container" style="align-content: center">
-        <h2 style="text-align: center">Request Form</h2>
-    <!-- Request Ride Form -->
-    <form action="/submitRequest" method="post">
+<!-- jQuery CDN - Slim version (=without AJAX) -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<!-- Popper.JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+<!-- Bootstrap JS -->
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
 
-        <div class="form-group form-inline">
-            <label>To:</label>
-            <input type="text" class="form-control" name="goingTo">
-        </div>
+<script>
+    $(document).ready(function () {
 
-        <div class="form-group  form-inline">
-            <label>From:</label>
-            <input type="text" class="form-control" name="comingFrom">
-        </div>
+        $('#sidebarCollapse').on('click', function () {
+            $('#sidebar').toggleClass('active');
+        });
 
-        <div class="form-group  form-inline">
-            <label>No. Passengers:</label>
-            <input type="number" class="form-control" min="0" max="5" name="numPassengers">
-        </div>
-
-        <label>Are Accommodations Needed?</label>
-        <div class="form-group form-check-inline">
-            <label class="radio-inline" for="yesCheck">
-                <input type="radio" class="btn-space form-check-input" onclick="javascript:yesnoCheck();" name="yesno"
-                       id="yesCheck">Yes
-            </label>
-            <label class="radio-inline" for="noCheck">
-                <input type="radio" class="btn-space form-check-input" onclick="javascript:yesnoCheck();" name="yesno"
-                       id="noCheck" checked>No
-            </label>
-        </div>
-        <div class="form-group" id="ifYes" style="visibility:hidden">
-            <label>Insert Accommodations Below:</label>
-            <input type="text" class="form-control" name="accommodations">
-        </div>
-
-        <div class="form-group text-center">
-            <input type="submit" id="submit" class="btn btn-secondary btn-lg" value="Submit">
-        </div>
-    </form>
-
-
-</div>
+    });
+</script>
 
 <script>
     function yesnoCheck() {
@@ -87,35 +133,6 @@
     }
 </script>
 
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
-
-<!-- jQuery Custom Scroller CDN -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js"></script>
-
-
-<script type="text/javascript">
-    $(document).ready(function () {
-        $("#sidebar").mCustomScrollbar({
-            theme: "minimal"
-        });
-
-        $('#sidebarCollapse').on('click', function () {
-            $('#sidebar, #content').toggleClass('active');
-            $('.collapse.in').toggleClass('in');
-            $('a[aria-expanded=true]').attr('aria-expanded', 'false');
-        });
-    });
-</script>
 </body>
 
 </html>
