Added a page for Gateway shuttle info

--- a/views/index1.css
+++ b/views/index1.css
@@ -103,3 +103,13 @@ a[data-toggle="collapse"] {
     text-align: center;
     color: white;
 }
+
+.btn {
+    background-color: #ac2b37;
+    text-decoration: #ac2b37;
+}
+
+.btn-info {
+    background-color: #ac2b37;
+    text-decoration: #ac2b37;
+}
