--- a/views/shuttleInfo.ejs
+++ b/views/shuttleInfo.ejs
@@ -47,7 +47,7 @@
         </div>
     </nav>
 
-    <!-- Page Content -->
+    <!-- Menu Button -->
     <div id="content">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
@@ -60,47 +60,24 @@
             </div>
         </nav>
 
-        <!-- Request Ride Form -->
-        <div class="container" style="align-content: center">
-            <h4 style="text-align: center">Request Form</h4>
-            <form action="/submitRequest" method="post">
-
-                <div class="form-group form-inline">
-                    <label style="float: left">To:</label>
-                    <input type="text" class="form-control" name="goingTo">
-                </div>
-
-                <div class="form-group  form-inline">
-                    <label>From:</label>
-                    <input type="text" class="form-control" name="comingFrom">
-                </div>
-
-                <div class="form-group  form-inline">
-                    <label>No. Passengers:</label>
-                    <input type="number" class="form-control" min="0" max="5" name="numPassengers">
-                </div>
-
-                <label>Are Accommodations Needed?</label>
-                <div class="form-group form-check-inline">
-                    <label class="radio-inline" for="yesCheck">
-                        <input type="radio" class="btn-space form-check-input" onclick="javascript:yesnoCheck();" name="yesno"
-                               id="yesCheck">Yes
-                    </label>
-                    <label class="radio-inline" for="noCheck">
-                        <input type="radio" class="btn-space form-check-input" onclick="javascript:yesnoCheck();" name="yesno"
-                               id="noCheck" checked>No
-                    </label>
-                </div>
-                <div class="form-group" id="ifYes" style="visibility:hidden">
-
-                    <input type="text" class="form-control" name="accommodations" value="Insert Accommodations...">
-                </div>
-
-                <div class="form-group text-center">
-                    <input type="submit" id="submit" class="btn btn-secondary btn-lg" value="Submit">
-                </div>
-            </form>
-
+        <!-- Shuttle Info -->
+        <div class="container">
+            <h3>Shuttle Hours:</h3>
+            <div>
+                <p>Monday: 7:30AM - 5:30 PM</p>
+            </div>
+            <div>
+                <p>Tuesday: 7:30AM - 5:30 PM</p>
+            </div>
+            <div>
+                <p>Wednesday: 7:30AM - 5:30 PM</p>
+            </div>
+            <div>
+                <p>Thursday: 7:30AM - 5:30 PM</p>
+            </div>
+            <div>
+                <p>Friday: 7:30AM - 5:30 PM</p>
+            </div>
         </div>
 
     </div>
