Added a page for SNAP Policy info

--- a/views/policy.ejs
+++ b/views/policy.ejs
@@ -62,22 +62,26 @@
 
         <!-- Shuttle Info -->
         <div class="container">
-            <h3>Shuttle Hours:</h3>
-            <div>
-                <p>Monday: 7:30AM - 5:30 PM</p>
-            </div>
-            <div>
-                <p>Tuesday: 7:30AM - 5:30 PM</p>
-            </div>
-            <div>
-                <p>Wednesday: 7:30AM - 5:30 PM</p>
-            </div>
-            <div>
-                <p>Thursday: 7:30AM - 5:30 PM</p>
-            </div>
-            <div>
-                <p>Friday: 7:30AM - 5:30 PM</p>
-            </div>
+            <h3 id="policy-header">SNAP Policy:</h3>
+
+            <ol>
+                <li class="policy-list"> Transports must fall under a limit of a one mile radius.</li>
+                <li class="policy-list"> Transports will be provided from off-campus housing, to campus and from campus, to off-campus housing.</li>
+                <li class="policy-list"> Transports will be provided when on campus to anywhere else on campus.</li>
+                <li class="policy-list"> A and D term a SNAP transport can be to or from Price Chopper all days of the week besides
+                    Friday and Saturday from 6pm onward. For B and C term a SNAP transport can be to or from
+                    Price Chopper all days of the week besides Friday and Saturday from 4pm onward.</li>
+                <li class="policy-list"> Transports are not used for rides to shopping centers, restaurants, bars, or any other commercial
+                    locations.</li>
+                <li class="policy-list"> Transports may be provided to WPI students traveling to and from Union Station for traveling
+                    purposes only, we advise that you give a 45 minute warning so that dispatch can fit this in their
+                    schedule. </li>
+                <li class="policy-list"> Transports are not allowed by law to transport any forms of drugs or alcohol. SNAP drivers are
+                    authorized to view any enclosed packages and /or containers.</li>
+                <li class="policy-list"> You must have a VALID WPI ID and be an active member of the WPI community to utilize
+                    SNAP services.</li>
+            </ol>
+
         </div>
 
     </div>
