--- a/views/index1.ejs
+++ b/views/index1.ejs
@@ -35,7 +35,7 @@
                 <a href="/shuttleInfo">Shuttles</a>
             </li>
             <li>
-                <a href="#">Policy</a>
+                <a href="/policy">Policy</a>
             </li>
             <li>
                 <a href="#">Contact SNAP</a>
