--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,99 +1,128 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <title>SNAP Student</title>
-    <link rel="icon" href="WPI_logo.png">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
-    <!-- Sidebar Nav CSS -->
-    <link rel="stylesheet" href="sidebarNavigation.css">
-
+    <!-- Bootstrap CSS CDN -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+    <!-- Our Custom CSS -->
     <link rel="stylesheet" href="index.css">
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-    <!-- Sidebar Nav JS -->
-    <script src="sidebarNavigation.js"></script>
+    <!-- Font Awesome JS -->
+    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
 </head>
+
 <body>
-<!-- Nav & Sidebar CSS -->
-<nav class="navbar navbar-inverse sidebarNavigation" data-sidebarClass="navbar-inverse">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle left-navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/index">SNAP</a>
-        </div>
-        <div class="collapse navbar-collapse" id="myNavbar">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#">Shuttles</a></li>
-                <li><a href="#">Rules & Regulations</a></li>
-                <li><a href="#">Contact SNAP</a></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-                <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-            </ul>
+<div class="wrapper">
 
-            <div>
-                <p id="bottom">SNAP: 508-831-6111</p>
+    <!-- Sidebar -->
+    <nav id="sidebar">
+        <div class="sidebar-header">
+            <h3>SNAP</h3>
+        </div>
+
+        <ul class="list-unstyled components">
+            <li class="active">
+                <a href="/index">Home</a>
+            </li>
+            <li>
+                <a href="/shuttleInfo">Shuttles</a>
+            </li>
+            <li>
+                <a href="/policy">Policy</a>
+            </li>
+            <li>
+                <a href="#">Contact SNAP</a>
+            </li>
+        </ul>
+
+        <div>
+            <p id="bottom">SNAP: 508-831-6111</p>
+        </div>
+    </nav>
+
+    <!-- Page Content -->
+    <div id="content">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+
+                <button type="button" id="sidebarCollapse" class="btn btn-info">
+                    <i class="fas fa-align-left"></i>
+                    <span>Menu</span>
+                </button>
+
             </div>
+        </nav>
+
+        <!-- Request Ride Form -->
+        <div class="container" style="align-content: center">
+            <h4 style="text-align: center">Request Form</h4>
+            <form action="/submitRequest" method="post">
+
+                <div class="form-group form-inline">
+                    <label style="float: left">To:</label>
+                    <input type="text" class="form-control" name="goingTo">
+                </div>
+
+                <div class="form-group  form-inline">
+                    <label>From:</label>
+                    <input type="text" class="form-control" name="comingFrom">
+                </div>
+
+                <div class="form-group  form-inline">
+                    <label>No. Passengers:</label>
+                    <input type="number" class="form-control" min="0" max="5" name="numPassengers">
+                </div>
+
+                <label>Are Accommodations Needed?</label>
+                <div class="form-group form-check-inline">
+                    <label class="radio-inline" for="yesCheck">
+                        <input type="radio" class="btn-space form-check-input" onclick="javascript:yesnoCheck();" name="yesno"
+                               id="yesCheck">Yes
+                    </label>
+                    <label class="radio-inline" for="noCheck">
+                        <input type="radio" class="btn-space form-check-input" onclick="javascript:yesnoCheck();" name="yesno"
+                               id="noCheck" checked>No
+                    </label>
+                </div>
+                <div class="form-group" id="ifYes" style="visibility:hidden">
+
+                    <input type="text" class="form-control" name="accommodations" value="Insert Accommodations...">
+                </div>
+
+                <div class="form-group text-center">
+                    <input type="submit" id="submit" class="btn btn-secondary btn-lg" value="Submit">
+                </div>
+            </form>
+
         </div>
+
     </div>
-</nav>
-
-<!-- Request Ride Form -->
-<div class="container" style="align-content: center">
-    <h4 style="text-align: center">Request Form</h4>
-    <form action="/submitRequest" method="post">
-
-        <div class="form-group form-inline">
-            <label style="float: left">To:</label>
-            <input type="text" class="form-control" name="goingTo">
-        </div>
-
-        <div class="form-group  form-inline">
-            <label>From:</label>
-            <input type="text" class="form-control" name="comingFrom">
-        </div>
-
-        <div class="form-group  form-inline">
-            <label>No. Passengers:</label>
-            <input type="number" class="form-control" min="0" max="5" name="numPassengers">
-        </div>
-
-        <label>Are Accommodations Needed?</label>
-        <div class="form-group form-check-inline">
-            <label class="radio-inline" for="yesCheck">
-                <input type="radio" class="btn-space form-check-input" onclick="javascript:yesnoCheck();" name="yesno"
-                       id="yesCheck">Yes
-            </label>
-            <label class="radio-inline" for="noCheck">
-                <input type="radio" class="btn-space form-check-input" onclick="javascript:yesnoCheck();" name="yesno"
-                       id="noCheck" checked>No
-            </label>
-        </div>
-        <div class="form-group" id="ifYes" style="visibility:hidden">
-
-            <input type="text" class="form-control" name="accommodations" value="Insert Accommodations...">
-        </div>
-
-        <div class="form-group text-center">
-            <input type="submit" id="submit" class="btn btn-secondary btn-lg" value="Submit">
-        </div>
-    </form>
 
 </div>
+
+<!-- jQuery CDN - Slim version (=without AJAX) -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<!-- Popper.JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+<!-- Bootstrap JS -->
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+
+<script>
+    $(document).ready(function () {
+
+        $('#sidebarCollapse').on('click', function () {
+            $('#sidebar').toggleClass('active');
+        });
+
+    });
+</script>
 
 <script>
     function yesnoCheck() {
@@ -104,6 +133,6 @@
     }
 </script>
 
-
 </body>
+
 </html>
