Made styling changes to the side navbar and the Shuttle Hours Page

--- a/views/policy.ejs
+++ b/views/policy.ejs
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <title>SNAP Student</title>
+    <link rel="icon" href="WPI_logo.png">
 
     <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
@@ -24,7 +25,7 @@
     <!-- Sidebar -->
     <nav id="sidebar">
         <div class="sidebar-header">
-            <h3>SNAP</h3>
+            <h3 class="snap-header">SNAP</h3>
         </div>
 
         <ul class="list-unstyled components">
