--- a/views/index.css
+++ b/views/index.css
@@ -9,12 +9,33 @@ body {
     background: #fafafa;
 }
 
-p {
+/*
+    Shuttle Styles
+ */
+.shuttle-hours {
     font-family: 'Poppins', sans-serif;
     font-size: 1.1em;
     font-weight: 300;
     line-height: 1.7em;
     color: #999;
+}
+
+.shuttle-desc {
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.2em;
+    font-weight: 300;
+    line-height: 1.7em;
+    color: black;
+}
+
+#shuttle-link {
+    color: blue;
+    text-decoration: underline;
+
+}
+
+#shuttle-link:hover {
+    cursor: pointer;
 }
 
 a, a:hover, a:focus {
@@ -34,7 +55,8 @@ a, a:hover, a:focus {
 }
 
 #sidebar .sidebar-header {
-    padding: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     background: #ac2b37;
 }
 
@@ -45,11 +67,11 @@ a, a:hover, a:focus {
 
 #sidebar ul p {
     color: #fff;
-    padding: 10px;
+    padding: 8px;
 }
 
 #sidebar ul li a {
-    padding: 10px;
+    padding: 8px;
     font-size: 1.1em;
     display: block;
 }
@@ -97,11 +119,29 @@ a[data-toggle="collapse"] {
     #sidebar.active {
         margin-left: 0;
     }
+
+    #form-inline {
+        margin-right: 4%;
+        margin-left: 4%;
+    }
+}
+
+@media (min-width: 576px) {
+    .snap-header {
+        text-align: center !important;
+    }
+}
+
+@media (max-width: 425px) {
+    .snap-header {
+        text-align: center !important;
+    }
 }
 
 #bottom {
     text-align: center;
     color: white;
+    font-size: 0.85em;
 }
 
 .btn {
@@ -146,4 +186,9 @@ ol > li:before {
     font-weight: bold;
     text-align: right;
     content: counter(item) ".";
+}
+
+.btn-space > * {
+    padding-left:3px !important;
+    padding-right:3px !important;
 }
