--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <title>SNAP Student</title>
+    <link rel="icon" href="WPI_logo.png">
 
     <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
@@ -24,7 +25,7 @@
     <!-- Sidebar -->
     <nav id="sidebar">
         <div class="sidebar-header">
-            <h3>SNAP</h3>
+            <h3 class="snap-header">SNAP</h3>
         </div>
 
         <ul class="list-unstyled components">
@@ -61,8 +62,8 @@
         </nav>
 
         <!-- Request Ride Form -->
-        <div class="container" style="align-content: center">
-            <h4 style="text-align: center">Request Form</h4>
+        <div class="container-fluid" style="max-width: 100%">
+            <h4 style="text-align: center !important;">Request Form</h4>
             <form action="/submitRequest" method="post">
 
                 <div class="form-group form-inline">
