--- a/views/shuttleInfo.ejs
+++ b/views/shuttleInfo.ejs
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <title>SNAP Student</title>
+    <link rel="icon" href="WPI_logo.png">
 
     <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
@@ -24,7 +25,7 @@
     <!-- Sidebar -->
     <nav id="sidebar">
         <div class="sidebar-header">
-            <h3>SNAP</h3>
+            <h3 class="snap-header">SNAP</h3>
         </div>
 
         <ul class="list-unstyled components">
@@ -64,19 +65,23 @@
         <div class="container">
             <h3>Shuttle Hours:</h3>
             <div>
-                <p>Monday: 7:30AM - 5:30 PM</p>
+                <p class="shuttle-hours">Monday: 7:30AM - 5:30 PM</p>
             </div>
             <div>
-                <p>Tuesday: 7:30AM - 5:30 PM</p>
+                <p class="shuttle-hours">Tuesday: 7:30AM - 5:30 PM</p>
             </div>
             <div>
-                <p>Wednesday: 7:30AM - 5:30 PM</p>
+                <p class="shuttle-hours">Wednesday: 7:30AM - 5:30 PM</p>
             </div>
             <div>
-                <p>Thursday: 7:30AM - 5:30 PM</p>
+                <p class="shuttle-hours">Thursday: 7:30AM - 5:30 PM</p>
             </div>
             <div>
-                <p>Friday: 7:30AM - 5:30 PM</p>
+                <p class="shuttle-hours">Friday: 7:30AM - 5:30 PM</p>
+            </div>
+            <div>
+                <p class="shuttle-desc">These are the hours for the gateway shuttle. For more information on the Gateway shuttle service,
+                follow this link: <a id="shuttle-link" href="http://www.wpi.edu/student-experience/resources/safety/campus-transportation/gateway-shuttle">Gateway Shuttle</a></p>
             </div>
         </div>
 
