--- a/views/shuttleInfo.ejs
+++ b/views/shuttleInfo.ejs
@@ -63,7 +63,8 @@
 
         <!-- Shuttle Info -->
         <div class="container">
-            <h3>Shuttle Hours:</h3>
+            <h3>Gateway Shuttle Hours:</h3>
+            <h5 style="text-decoration: underline">C Term: </h5>
             <div>
                 <p class="shuttle-hours">Monday: 7:30AM - 5:30 PM</p>
             </div>
